Fix content overflow on about.html

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -241,9 +241,17 @@ section.profiles {
                 .profile-content {
                     @extend .card;
 
-                    height: 650px;
+                    height: 550px;
                     padding: 150px 20px 20px 20px;
                     border-radius: .5rem;
+
+                    @include media-breakpoint-up(lg) {
+                        height: 800px;
+                    }
+
+                    @include media-breakpoint-up(xl) {
+                        height: 650px;
+                    }
 
                     .name {
                         @extend .card-title;
